# backlash_simulation_examples

./: .gitignore  README.md  environnement.yml  setup.cfg  setup.py
notebooks/: advanced_example.ipynb  example_1D.ipynb  example_3D.ipynb
src/backlash_simulation_examples/models/: model_1dof_backlash.py  model_endoscope_2D.py  model_endoscope_3D.py  model_endoscope_two_bending_3D.py  plot_ref_frames.py
src/backlash_simulation_examples/models/backlash/: generic_backlash.py  multi_dof_backlash.py  one_dof_backlash.py  one_dof_backlash_alternative_parameterization.py
src/models/: model_1dof_backlash.py  model_endoscope_2D.py  model_endoscope_3D.py  model_endoscope_two_bending_3D.py  plot_ref_frames.py
src/models/backlash/: generic_backlash.py  multi_dof_backlash.py  one_dof_backlash.py  one_dof_backlash_alternative_parameterization.py
