[metadata]
name = backlash_simulation_examples
author = Thibault Poignonec
author_email = tpoignonec@unistra.fr
version = 0.1.0
description = Basic backlash simulation scripts with examples.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = False
python_requires = >=3.10
package_dir=
    =src
packages=find:
install_requires =
    numpy
    scipy
    sympy
    pandas
    statsmodels
    matplotlib
    seaborn
    tdqm

[options.extras_require]  # in setup.cfg
test =
    pytest
    pytest-cov

[options.packages.find]
where=src
exclude =
    notebooks*